# MLonMCU-project

./: MODELS.md  README.md
pc-implementation/: README.md  plot_network_diagrams.sh  pyproject.toml  train_pc_models.sh
pc-implementation/reports/: baseline_5x5_fp32_metrics.json  baseline_5x5_qat_metrics.json  baseline_fp32_metrics.json  baseline_qat_metrics.json  deeper_fp32_metrics.json  deeper_qat_metrics.json  improved_fp32_metrics.json  improved_qat_metrics.json  mininet_fp32_metrics.json  mininet_qat_metrics.json  nascifarnet_fp32_metrics.json  nascifarnet_qat_metrics.json  ressimplenet_fp32_metrics.json  ressimplenet_qat_metrics.json  summary.md
pc-implementation/reports/int8_eval/: summary.txt
pc-implementation/reports/predictions/: baseline_5x5_fp32.npz  baseline_5x5_qat.npz  baseline_fp32.npz  baseline_qat.npz  (+10 more)
pc-implementation/scripts/: build_report.py  eval_int8.py  plot_fp32_acc_vs_macs.py  plot_models_report.py  plot_network_diagrams.py  run_distillation.py  run_experiment.py  run_pruning.py  run_qat_prune.py
pc-implementation/trained_models/: baseline_5x5_fp32.pt  baseline_5x5_fp32_ptq.pt  baseline_5x5_qat.pt  baseline_fp32.pt  baseline_fp32_ptq.pt  baseline_qat.pt  deeper_fp32.pt  deeper_fp32_ptq.pt  deeper_qat.pt  improved_fp32.pt  improved_fp32_ptq.pt  improved_qat.pt  mininet_fp32.pt  mininet_fp32_ptq.pt  mininet_qat.pt  nascifarnet_fp32.pt  nascifarnet_fp32_ptq.pt  nascifarnet_qat.pt  ressimplenet_fp32.pt  ressimplenet_fp32_ptq.pt  ressimplenet_qat.pt
pc-implementation/training/: data.py  engine.py  models.py  quantize.py  utils.py
(+305 files in other folders)
